fix submit form button on mobile

--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@
         text-align: center;
         align-items: center;
     }
+    .btn {
+        margin: 0 auto;
+        display: block;
+    }
    
     
    
